# ai_bot

./: .gitignore  Dockerfile  fly.toml  pyproject.toml
src/meet_agent/: __init__.py  __main__.py  agent.py  config.py  google_calendar.py  pipeline.py  server.py
src/meet_agent/transport/: __init__.py  client.py  models.py
