[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meet-agent-v2"
version = "0.1.0"
description = "AI meeting agent: Deepgram STT + GPT-4o-mini + ElevenLabs TTS"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "websockets>=14,<15",
    "python-dotenv>=1.0,<2",
    "pyngrok>=7.0",
    "ddgs>=8",
    "deepgram-sdk>=3.7,<4",
    "openai>=1.50,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meet_agent"]
